chore: Pequenos ajustes.
Este commit foi realizado a fim de evitar conflitos na branch principal.